test/runtime-integration-tests/TestPrograms/Syntax/Invalid/underscore_identifier.5th
// Use an unambiguously invalid statement to force a parse error
main(): int { for; }
